@@ -4,7 +4,8 @@ Changelog
 0.10 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Generate scales when we add images in and edm listing.
+  [thomasdesvenain]
 
 
 0.9 (2013-03-20)
